Fix Login and Register
Fix the layout problem with Login and Register
Added them to the page controller.

--- a/Backend/ProFlex/src/main/resources/static/Register.css
+++ b/Backend/ProFlex/src/main/resources/static/Register.css
@@ -1,6 +1,6 @@
 body {
     font-family: Poppins, sans-serif;
-    background-color: white;
+    background: white;
     margin: 0;
     padding: 0;
 }
@@ -9,20 +9,17 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
-    justify-content: space-evenly;
+    justify-content: center;
 }
 
 #section {
-    margin-top: 2rem;
     background-color: white;
-    align-items: center;
     text-align: center;
     box-shadow: 0.2rem 0.2rem 1rem 0.2rem #cbcbcb;
     padding-bottom: 3rem;
     padding-left: 5rem;
     padding-right: 5rem;
-    border-radius: 40px;
+    width: 40rem;
 }
 
 ul {
@@ -56,7 +53,26 @@ h1 {
     font-size: 1.3rem;
     font-weight: lighter;
     color: #1f1f1f;
-    width: 90%;
+}
+
+#text-email-bar {
+    width: 26.5rem;
+}
+
+#text-firstname-bar {
+    width: 24rem;
+}
+
+#text-lastname-bar {
+    width: 24.5rem;
+}
+
+#password-text-bar {
+    width: 25rem;
+}
+
+#password-confirm-text-bar {
+    width: 20rem;
 }
 
 #email-list {
